// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object list widget component 1`] = `
<div
  className="inline required field help text"
  id="[object Object]-my-widget"
  onClick={[Function]}
>
  <div
    className="ui grid"
  >
    <div
      className="stretched row"
    >
      <div
        className="four wide column"
      >
        <div
          className="wrapper"
        >
          <label
            htmlFor="field-my-widget"
          >
            <i
              aria-hidden="true"
              className="grey bars icon drag handle"
            />
            My Widget
          </label>
        </div>
      </div>
      <div
        className="eight wide column"
      >
        <div
          className="ui disabled icon input"
        >
          <input
            disabled={true}
            id="field-my-widget"
            name="my-widget"
            onChange={[Function]}
            tabIndex={-1}
            type="text"
            value="A collection of 2 items"
          />
          <i
            aria-hidden="true"
            attributes={
              Object {
                "viewBox": "",
                "xmlns": "",
              }
            }
            className="icon"
            onClick={[Function]}
          />
        </div>
        <div
          className="toolbar"
        >
          <button
            aria-label="Edit"
            className="item ui noborder button"
            onClick={[Function]}
            title="Edit"
          >
            <i
              aria-hidden="true"
              className="blue write square large icon"
              onClick={[Function]}
            />
          </button>
          <button
            aria-label="Delete"
            className="item ui noborder button"
            onClick={[Function]}
            title="Delete"
          >
            <i
              aria-hidden="true"
              className="red close large icon"
              onClick={[Function]}
            />
          </button>
        </div>
        <button
          data-testid="big-pen-button"
          onClick={[Function]}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "18px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
      </div>
    </div>
    <div
      className="stretched row"
    >
      <div
        className="stretched twelve wide column"
      >
        <p
          className="help"
        >
          My description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an object list widget component and changes its value by clicking a button 1`] = `
<DocumentFragment>
  <div
    class="inline required field help text"
    id="[object Object]-my-widget"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-widget"
            >
              <i
                aria-hidden="true"
                class="grey bars icon drag handle"
              />
              My Widget
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="ui disabled icon input"
          >
            <input
              disabled=""
              id="field-my-widget"
              name="my-widget"
              tabindex="-1"
              type="text"
              value="A collection of 2 items"
            />
            <i
              aria-hidden="true"
              attributes="[object Object]"
              class="icon"
            />
          </div>
          <div
            class="toolbar"
          >
            <button
              aria-label="Edit"
              class="item ui noborder button"
              title="Edit"
            >
              <i
                aria-hidden="true"
                class="blue write square large icon"
              />
            </button>
            <button
              aria-label="Delete"
              class="item ui noborder button"
              title="Delete"
            >
              <i
                aria-hidden="true"
                class="red close large icon"
              />
            </button>
          </div>
          <button
            data-testid="big-pen-button"
          >
            <svg
              class="icon"
              style="height: 18px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </button>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="stretched twelve wide column"
        >
          <p
            class="help"
          >
            My description
          </p>
        </div>
      </div>
    </div>
  </div>
  <button>
    Click me !
  </button>
</DocumentFragment>
`;
